# torchbricks

./: .gitignore  .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  LICENSE  MANIFEST.in  Makefile  README.ipynb  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.py  virtual-packages.yml
.github/: release_message.sh  rename_project.sh
.github/workflows/: main.yml  release.yml  rename_project.yml
scripts/: lightning_bricks.py  lightning_module.py  train_lightning_cifar10.py
src/torch_bricks/: bricks.py  custom_metrics.py  lightning_bricks.py
src/torchbricks/: bag_of_bricks.py  brick_collection.py  brick_collection_utils.py  brick_group.py  brick_tags.py  brick_utils.py  brick_visualizer.py  bricks.py  bricks_helper.py  collection_utils.py  custom_metrics.py  dag.py  graph_plotter.py  model_stage.py  tensor_conversions.py  tensor_operations.py
src/torchbricks/bag_of_bricks/: backbones.py  brick_visualizer.py  custom_metrics.py  image_classification.py  preprocessors.py  task_utils.py
src/torchbricks/lightning_bricks/: lightning_bricks.py
tests/: conftest.py  lightning_module.py  test_README_code_snippets.py  test_bag_of_bricks.py  test_base.py  test_brick_collection.py  test_brick_collection_utils.py  test_brick_utils.py  test_brick_visualizer.py  test_bricks.py  test_bricks_helper.py  test_collection_utils.py  test_environment.py  test_graph_builder.py  test_tensor_conversions.py  test_tensor_operations.py  utils_testing.py
tests/back_of_bricks/: test_backbone.py  test_brick_visualizer.py  test_image_classification.py
tests/data/: copy_lock_filed_environment.yml
tests/utils_testing/: datamodule_cifar10.py  lightning_module.py  utils_testing.py
torch_bricks/: __main__.py  base.py  cli.py
