[tool.ruff]
line-length = 140

[project]
name = "torchbricks"
version = "0.0.4"
description = "Decoupled and modular approach to building multi-task ML models"
readme = "README.md"
authors = [{ name = "Peter Hviid Christianse", email = "PeterHviidChristiansen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["torch", "multi-task", "machine learning"]

dependencies = [
    "torch >= 1.7",
    "torchmetrics >= 0.10.0",
]

requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/PeteHeine/torchbricks"

# bumpver update --patch | --minor | --major --dry
[tool.bumpver]
current_version = "0.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]  # Specify all files containging version-numbers
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/torchbricks/__init__.py" = ["{version}"]
