[project]
name = "torchbricks"
version = "0.4.0"
description = "Decoupled and modular approach to building multi-task ML models using a single model recipe for all model stages"
readme = "README.md"
authors = [{ name = "Peter Hviid Christiansen", email = "PeterHviidChristiansen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["torch", "multi-task", "machine learning"]

dependencies = [
    "torch >= 1.7",
    "torchmetrics>=0.10.0",
    "torchvision>=0.14.1",
    "typeguard>=2.13.3",
    "onnx>=1.14.1",
    "pillow>=9.5.0",
]

requires-python = ">=3.7"

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
    "bumpver>=2024.1130",
    "pytorch-lightning>=1.9.5",
    "wandb>=0.18.7",
    "nbmake>=1.4.3",
    "nbconvert>=7.6.0",
    "lark>=1.1.9",
]


[project.urls]
Homepage = "https://github.com/pete-machine/torchbricks"

# bumpver update --patch | --minor | --major --dry
[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]  # Specify all files containging version-numbers
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/torchbricks/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 140
select = ["C4", "E", "F","B", "I", "W", "RUF", "Q"]
